src/components/containers/articles/article.module.css
.downloadLink {
  @apply mt-10 block;
}
.spacer {
  @apply h-[3.75rem]
  w-full
  md:h-[7.5rem];
}
.h1 {
  @apply text-xl
  md:max-w-[57.9375rem]
  md:text-xxl;
}

.infoTitle {
  @apply text-md
  md:text-lg;
}

.infoTitleContainer {
  @apply mb-10;
}

.articleXSpacing {
  @apply mx-auto
  max-w-[43.125rem];
}

